# Inango_TestTask

./: .gitmodules
DNS_proxy/: CMakeLists.txt  README.md  main.c  main.h
DNS_proxy/dns_packet/: CMakeLists.txt  dns_packet.c  dns_packet.h
DNS_proxy/python_tests/: test.py
DNS_proxy/src/: main.c  main.h
DNS_proxy/src/dns_packet/: CMakeLists.txt  dns_defs.h  dns_packet.c  dns_packet.h  dns_validation.c  dns_validation.h
DNS_proxy/src/dns_packet_list/: CMakeLists.txt  dns_packet_list.c  dns_packet_list.h
DNS_proxy/src/inih/: CMakeLists.txt  inih.c  inih.h
DNS_proxy/src/load_config/: CMakeLists.txt  load_config.c  load_config.h
DNS_proxy/src/thpool/: CMakeLists.txt  thpool.c  thpool.h
DNS_proxy/src/trafic_stats/: CMakeLists.txt  trafic_stats.c  trafic_stats.h
DNS_proxy/src/udp_server/: CMakeLists.txt  udp_server.c  udp_server.h
DNS_proxy/src/utils/: CMakeLists.txt  error_utils.h  remove_elements.c  remove_elements.h  sockaddr_utils.c  sockaddr_utils.h  strrchrn.c  strrchrn.h
DNS_proxy/stress_test/: CMakeLists.txt  main.c
DNS_proxy/tests/: CMakeLists.txt  main.c
DNS_proxy/tests/check/: check_error.c  check_error.h  check_impl.h  check_list.c  check_list.h  check_pretty_print.c  check_pretty_print.h  libcompat.c  libcompat.h
DNS_proxy/tests/dns_packet/: is_valid_label.c  main.c  main.h  parse_dns_packet.c  parse_dns_queries.c  parse_domain_name.c  serialize_and_parse_domain_name.c  validate_class.c  validate_dns_header.c  validate_qclass.c  validate_qtype.c  validate_type.c
DNS_proxy/thpool/: CMakeLists.txt
DNS_proxy/trafic_stats/: CMakeLists.txt  trafic_stats.c  trafic_stats.h
DNS_proxy/udp_server/: CMakeLists.txt  udp_server.c  udp_server.h
FileFat32/: CMakeLists.txt  README.md
FileFat32/src/: main.c  main.h
Linux_Kernel_Module/: .gitmodules  README.md
Linux_Kernel_Module/src/conf/: layer.conf
Linux_Kernel_Module/src/recipes/watchpoint/: watchpoint.bb
Linux_Kernel_Module/src/recipes/watchpoint-test/: watchpoint-test.bb
Linux_Kernel_Module/src/recipes/watchpoint-test/files/: watchpoint_test.c
Linux_Kernel_Module/src/recipes/watchpoint/files/: Makefile  watchpoint.c  watchpoint_test.c
